# ozbargainer

./: .detect-secrets.baseline  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  db_manager.py  diag.py  docker-compose.yml  fetch_user_activity.py  live_monitor.py  manage.sh  mypy.ini  notifier.py  pyproject.toml  requirements.txt  scraper.py  test_scraper.py
.agents/skills/: ozbargain_data_agent.md
.github/workflows/: ci.yml
ozbargain/: config.py  models.py
ozbargain/core/: monitor.py  scraper.py
ozbargain/db/: manager.py  schema.py
ozbargain/notifier/: telegram.py
ozbargain/utils/: logger.py  urls.py
scripts/: backup_db.sh  bridge.sh  chrome_tab_audit.py  cleanup_db.py  fetch_user_activity.py  verify_bridge.py
tests/: test_config.py  test_db_manager.py  test_monitor_integration.py  test_monitor_parsing.py  test_scraper.py  test_scraper_parsing.py  test_telegram.py  test_telegram_listener.py  test_urls.py
